[gd_scene load_steps=3 format=3 uid="uid://bsawnyh5ghqyt"]

[ext_resource type="Theme" uid="uid://btiur1awmdby3" path="res://themes/game_ui.tres" id="1_xfeic"]
[ext_resource type="Script" path="res://components/DialogBox.gd" id="2_ub5gs"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xfeic")
script = ExtResource("2_ub5gs")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
theme = ExtResource("1_xfeic")
color = Color(0.470588, 0.466667, 0.419608, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
theme = ExtResource("1_xfeic")
alignment = 1

[node name="Menu Bar" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="ColorRect/VBoxContainer/Menu Bar"]
layout_mode = 2

[node name="TextBackground" type="ColorRect" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.309804, 0.184314, 0.156863, 0.278431)

[node name="DialogElement" type="RichTextLabel" parent="ColorRect/VBoxContainer/TextBackground"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="OkButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Ok"

[connection signal="pressed" from="ColorRect/VBoxContainer/Menu Bar/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/OkButton" to="." method="_on_ok_button_pressed"]
